--- a/test-vlad/404.html
+++ b/test-vlad/404.html
@@ -12,11 +12,43 @@
     }
 
     html {
-      background: linear-gradient(315deg, transparent 75%, #0a0a0a 0)-24px 0,
-      linear-gradient(45deg, transparent 75%, #0a0a0a 0) 24px 0,
-      linear-gradient(135deg, #3d3d3d 50%, transparent 0) 0 0,
-      linear-gradient(45deg, #575757 50%, #707070 0) 0 0 #707070;
-      background-size: 48px 48px;
+      color: #888;
+      display: table;
+      font-family: sans-serif;
+      height: 100%;
+      text-align: center;
+      width: 100%;
+    }
+
+    body {
+      display: table-cell;
+      vertical-align: middle;
+      margin: 2em auto;
+    }
+
+    h1 {
+      color: #555;
+      font-size: 2em;
+      font-weight: 400;
+    }
+
+    p {
+      margin: 0 auto;
+      width: 280px;
+    }
+
+    @media only screen and (max-width: 280px) {
+
+      body,
+      p {
+        width: 95%;
+      }
+
+      h1 {
+        font-size: 1.5em;
+        margin: 0 0 0.3em;
+      }
+
     }
   </style>
 </head>
