--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-<!doctype html><html class="no-js" lang=""><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Somnia Jump</title><link rel="icon" href="/test-vlad/assets/favicon.ico" sizes="any"><link rel="icon" href="/test-vlad/assets/icon.svg" type="image/svg+xml"><link rel="apple-touch-icon" href="/test-vlad/assets/icon.png"><link rel="manifest" href="/test-vlad/assets/site.webmanifest"><meta name="theme-color" content="#fafafa"><script defer="defer" src="/test-vlad/js/591.9d12ed763db6c49957c1.js"></script><script defer="defer" src="/test-vlad/js/app.02477e532165333c3cf7.js"></script><link href="/test-vlad/css/app.658c2994f2080a988bef.css" rel="stylesheet"></head><body><div id="gameContainer"><canvas id="gameCanvas" width="400" height="600"></canvas><div id="connectWalletScreen"><h1>Somnia Jump</h1><p class="author">by What1sl0ve for</p><img class="company-logo" src="/test-vlad/assets/somnia-logo-light.svg" alt="Company Logo"> <button id="connectWalletButton">Connect Wallet</button></div><div id="startScreen" style="display:none"><h1>Somnia Jump</h1><p class="author">by What1sl0ve for</p><img class="company-logo" src="/test-vlad/assets/somnia-logo-light.svg" alt="Company Logo"><div class="button-container"><button id="startButton">Start</button> <button id="leaderboardButton">Leaderboard</button> <button id="myRecordButton">My Record</button></div></div><div id="gameOver" style="display:none"><p id="scoreDisplay">Score: 0</p><div class="button-container"><button id="restartButton">Restart</button> <button id="submitScoreButton">Submit Score</button> <button id="gameOverLeaderboardButton">Leaderboard</button> <button id="gameOverMyRecordButton">My Record</button></div></div><div id="leaderboardModal" style="display:none"><div id="leaderboardContent"><h2>Leaderboard</h2><table id="leaderboardTable"><thead><tr><th>Rank</th><th>Address</th><th>Score</th><th>Time</th></tr></thead><tbody id="leaderboardBody"></tbody></table><button id="closeLeaderboardButton">Close</button></div></div></div></body></html>
+<!DOCTYPE html>
+<html>
+    <link rel="stylesheet" href="main.css"></link>
+    <body>
+        <img src="assets/background.png" id="title-screen">
+        <img src="assets/parallax_mountain_pack/layers/parallax-mountain-bg.png" id="parallax-mountain-bg">
+        <img src="assets/parallax_mountain_pack/layers/parallax-mountain-montain-far.png" id="parallax-mountain-montain-far">
+        <img src="assets/parallax_mountain_pack/layers/parallax-mountain-mountains.png" id="parallax-mountain-mountains">
+        <img src="assets/parallax_mountain_pack/layers/parallax-mountain-trees.png" id="parallax-mountain-trees">
+        <img src="assets/parallax_mountain_pack/layers/parallax-mountain-foreground-trees.png" id="parallax-mountain-foreground-trees">
+        <img src="assets/Tileset.png" id="tiles">
+        <img src="assets/hero-idle-left.png" id="hero-idle-left">
+        <img src="assets/hero-idle-right.png" id="hero-idle-right">
+        <img src="assets/hero-run-left.png" id="hero-run-left">
+        <img src="assets/hero-run-right.png" id="hero-run-right">
+        <img src="assets/hero-jump-left.png" id="hero-jump-left">
+        <img src="assets/hero-jump-right.png" id="hero-jump-right">
+        <img src="assets/hero-attack-left.png" id="hero-attack-left">
+        <img src="assets/hero-attack-right.png" id="hero-attack-right">
+        <img src="assets/hero-crouch-left.png" id="hero-crouch-left">
+        <img src="assets/hero-crouch-right.png" id="hero-crouch-right">
+        <img src="assets/hero-hurt-left.png" id="hero-hurt-left">
+        <img src="assets/hero-hurt-right.png" id="hero-hurt-right">
+        <div class="canvas-container">
+            <canvas id="main_screen" width="816" height="480"></canvas>
+            <div id="title-buttons" class="button-container">
+                <button id="start-button">Start Game</button>
+            </div>
+            <div id="game-over-buttons" class="button-container" style="display: none;">
+                <button id="restart-button">Restart Game</button>
+            </div>
+            <div id="demo-complete-buttons" class="button-container" style="display: none;">
+                <button id="demo-restart-button">Restart Game</button>
+            </div>
+        </div>
+        <audio id="theAudio">
+            <source src="assets/moonlight.mp3" type="audio/mp3">
+        </audio>
+    </body>
+    <script src="main.js"></script>
+</html>
